<resources>
    <string name="app_name">Faircorp</string>
    <string name="app_logo_description">Faircorp logo</string>
    <string name="act_main_windowname_hint">Light name</string>s
    <string name="act_main_welcome">Welcome on faircorp, <br></br> the app to manage building windows</string>
    <string name="act_main_open_window">Open window</string>
    <string name="act_light_name">Ligth name</string>
    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_room_target_temp">Target room temperature</string>
    <string name="act_window_room_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>
</resources>